engine/mono/Imgui/imgui.cs


        // ../../imgui/imgui.h:460
        [DllImport(Engine.Paths.Exe, EntryPoint = "?ProgressBar@ImGui@@YAXMAEBUImVec2@@PEBD@Z")]
        public static extern void ProgressBar(
            float fraction,
            in Vector2 size_arg,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay = default
        );
        // overload
        public static void ProgressBar(
            float fraction
        )
        {
            ProgressBar(fraction, new Vector2(-1,0));
        }

        // ../../imgui/imgui.h:461
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Bullet@ImGui@@YAXXZ")]
        public static extern void Bullet(
        );

        // ../../imgui/imgui.h:466
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BeginCombo@ImGui@@YA_NPEBD0H@Z")]
        public static extern bool BeginCombo(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string preview_value,
            int flags = default
        );

        // ../../imgui/imgui.h:467
        [DllImport(Engine.Paths.Exe, EntryPoint = "?EndCombo@ImGui@@YAXXZ")]
        public static extern void EndCombo(
        );

        // ../../imgui/imgui.h:468
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Combo@ImGui@@YA_NPEBDPEAHQEBQEBDHH@Z")]
        public static extern bool Combo(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int current_item,
            in IntPtr items,
            int items_count,
            int popup_max_height_in_items = -1
        );

        // ../../imgui/imgui.h:469
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Combo@ImGui@@YA_NPEBDPEAH0H@Z")]
        public static extern bool Combo(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int current_item,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string items_separated_by_zeros,
            int popup_max_height_in_items = -1
        );

        // ../../imgui/imgui.h:470
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Combo@ImGui@@YA_NPEBDPEAHP6A_NPEAXHPEAPEBD@Z2HH@Z")]
        public static extern bool Combo(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int current_item,
            IntPtr items_getter,
            IntPtr data,
            int items_count,
            int popup_max_height_in_items = -1
        );

        // ../../imgui/imgui.h:480
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DragFloat@ImGui@@YA_NPEBDPEAMMMM0M@Z")]
        public static extern bool DragFloat(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_speed,
            float v_min,
            float v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            float power = 1.0f
        );
        // overload
        public static bool DragFloat(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_speed = 1.0f,
            float v_min = default,
            float v_max = default
        )
        {
            return DragFloat(label, ref v, v_speed, v_min, v_max, "%.3f");
        }

        // ../../imgui/imgui.h:481
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DragFloat2@ImGui@@YA_NPEBDQEAMMMM0M@Z")]
        public static extern bool DragFloat2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_speed,
            float v_min,
            float v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            float power = 1.0f
        );
        // overload
        public static bool DragFloat2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_speed = 1.0f,
            float v_min = default,
            float v_max = default
        )
        {
            return DragFloat2(label, ref v, v_speed, v_min, v_max, "%.3f");
        }

        // ../../imgui/imgui.h:482
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DragFloat3@ImGui@@YA_NPEBDQEAMMMM0M@Z")]
        public static extern bool DragFloat3(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_speed,
            float v_min,
            float v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            float power = 1.0f
        );
        // overload
        public static bool DragFloat3(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_speed = 1.0f,
            float v_min = default,
            float v_max = default
        )
        {
            return DragFloat3(label, ref v, v_speed, v_min, v_max, "%.3f");
        }

        // ../../imgui/imgui.h:483
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DragFloat4@ImGui@@YA_NPEBDQEAMMMM0M@Z")]
        public static extern bool DragFloat4(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_speed,
            float v_min,
            float v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            float power = 1.0f
        );
        // overload
        public static bool DragFloat4(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_speed = 1.0f,
            float v_min = default,
            float v_max = default
        )
        {
            return DragFloat4(label, ref v, v_speed, v_min, v_max, "%.3f");
        }

        // ../../imgui/imgui.h:484
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DragFloatRange2@ImGui@@YA_NPEBDPEAM1MMM00M@Z")]
        public static extern bool DragFloatRange2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v_current_min,
            ref float v_current_max,
            float v_speed,
            float v_min,
            float v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format_max = default,
            float power = 1.0f
        );
        // overload
        public static bool DragFloatRange2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v_current_min,
            ref float v_current_max,
            float v_speed = 1.0f,
            float v_min = default,
            float v_max = default
        )
        {
            return DragFloatRange2(label, ref v_current_min, ref v_current_max, v_speed, v_min, v_max, "%.3f");
        }

        // ../../imgui/imgui.h:485
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DragInt@ImGui@@YA_NPEBDPEAHMHH0@Z")]
        public static extern bool DragInt(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            float v_speed,
            int v_min,
            int v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format
        );
        // overload
        public static bool DragInt(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            float v_speed = 1.0f,
            int v_min = default,
            int v_max = default
        )
        {
            return DragInt(label, ref v, v_speed, v_min, v_max, "%d");
        }

        // ../../imgui/imgui.h:486
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DragInt2@ImGui@@YA_NPEBDQEAHMHH0@Z")]
        public static extern bool DragInt2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            float v_speed,
            int v_min,
            int v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format
        );
        // overload
        public static bool DragInt2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            float v_speed = 1.0f,
            int v_min = default,
            int v_max = default
        )
        {
            return DragInt2(label, ref v, v_speed, v_min, v_max, "%d");
        }

        // ../../imgui/imgui.h:487
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DragInt3@ImGui@@YA_NPEBDQEAHMHH0@Z")]
        public static extern bool DragInt3(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            float v_speed,
            int v_min,
            int v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format
        );
        // overload
        public static bool DragInt3(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            float v_speed = 1.0f,
            int v_min = default,
            int v_max = default
        )
        {
            return DragInt3(label, ref v, v_speed, v_min, v_max, "%d");
        }

        // ../../imgui/imgui.h:488
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DragInt4@ImGui@@YA_NPEBDQEAHMHH0@Z")]
        public static extern bool DragInt4(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            float v_speed,
            int v_min,
            int v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format
        );
        // overload
        public static bool DragInt4(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            float v_speed = 1.0f,
            int v_min = default,
            int v_max = default
        )
        {
            return DragInt4(label, ref v, v_speed, v_min, v_max, "%d");
        }

        // ../../imgui/imgui.h:489
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DragIntRange2@ImGui@@YA_NPEBDPEAH1MHH00@Z")]
        public static extern bool DragIntRange2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v_current_min,
            ref int v_current_max,
            float v_speed,
            int v_min,
            int v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format_max = default
        );
        // overload
        public static bool DragIntRange2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v_current_min,
            ref int v_current_max,
            float v_speed = 1.0f,
            int v_min = default,
            int v_max = default
        )
        {
            return DragIntRange2(label, ref v_current_min, ref v_current_max, v_speed, v_min, v_max, "%d");
        }

        // ../../imgui/imgui.h:490
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DragScalar@ImGui@@YA_NPEBDHPEAXMPEBX20M@Z")]
        public static extern bool DragScalar(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            int data_type,
            IntPtr p_data,
            float v_speed,
            IntPtr p_min = default,
            IntPtr p_max = default,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format = default,
            float power = 1.0f
        );

        // ../../imgui/imgui.h:491
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DragScalarN@ImGui@@YA_NPEBDHPEAXHMPEBX20M@Z")]
        public static extern bool DragScalarN(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            int data_type,
            IntPtr p_data,
            int components,
            float v_speed,
            IntPtr p_min = default,
            IntPtr p_max = default,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format = default,
            float power = 1.0f
        );
